--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ subjects:
 - !lcc 'DS'
 - !lcsh 'Ethnology -- India, South'
 - !lcsh 'India, South -- Social life and customs'
+- GITenberg
 title: Castes and Tribes of Southern India. Vol. 3 of 7
 url: http://www.gutenberg.org/ebooks/42993
